src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Affiliation_Copy__c</fullName>
        <description>Because Affiliation is a Long Text Area field, it cannot be used in the Batch Apex class.</description>
        <label>Affiliation Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CHRIS_ID__c</fullName>
        <label>CHRIS ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Federated_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Federated ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_GSA_Short_Symbol__c</fullName>
        <label>GSA Short Symbol</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Contact ID from Oracle</description>
        <externalId>true</externalId>
        <label>Contact ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Region__c</fullName>
        <label>Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_from_Hire_Date__c</fullName>
        <description>If Hire Date is in the future, display 0. Else, display the days between Today and Hire Date.</description>
        <formula>IF(Person_Start_Date__c &gt; Today(), 0, Today() -  Person_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Hire Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used to store the external ID from the legacy IQ system during the IQ to Force.com migration effort.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTRD_Is_FTRD_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to identify if the contact is FTRD Contact or not</description>
        <label>FTRD Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GOVTPOC_COTAR__c</fullName>
        <label>COTR for Contractors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groups_Interested_In_This_Contact__c</fullName>
        <description>This field allows admin to identify various groups that interact with a contact. The primary purpose is for reporting.</description>
        <label>Groups Interested in this Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>OCSIT</fullName>
                </value>
                <value>
                    <fullName>PBS CS</fullName>
                </value>
                <value>
                    <fullName>NMCD</fullName>
                </value>
                <value>
                    <fullName>TSS Survey FY16</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAJOR_ORG_DESCRIPTION__c</fullName>
        <label>Master ORG Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAJOR_ORG__c</fullName>
        <label>Master ORG</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewHireEmailTextStatuses__c</fullName>
        <description>Track Survey Email Status Processes by text values. Should be hidden, possibly read only.
Expected values are: 
NH_30 Day Sent;
NH_30 Day Responded;
NH_90 Day Sent;
NH_90 Day Responded;
NH_180 Day Sent;
NH_180 Day Responded;
NH_1 Year Sent;
NH_1 Year Responded;
NH_1.5 Years Sent;
NH_1.5 Years Responded;</description>
        <label>New Hire Email Text Statuses</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewHireTextStatusQualtrics__c</fullName>
        <description>This field will be updated from Qualtrics after the survey has been responded</description>
        <label>New Hire Text Status (Qualtrics)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_test__c</fullName>
        <label>Number test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_AKA_Nickname__c</fullName>
        <label>AKA (Nickname)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Contact_Via__c</fullName>
        <label>Contact Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Contact_as_of_Date__c</fullName>
        <label>Contact as of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OCR_Email_Bounced__c</fullName>
        <formula>IF ( ISBLANK(EmailBouncedDate), &quot;&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Bounced?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Reporting_State__c</fullName>
        <formula>TEXT( Account.OCR_Reporting_State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Title_VI_Primary_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Title VI Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Separation_Date__c</fullName>
        <label>Person Separation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person_Start_Date__c</fullName>
        <label>Person Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Public_Engagement_Assistant_Email__c</fullName>
        <description>This field captures Assistant&apos;s email address if available.</description>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Public_Engagement_Assistant_Fax__c</fullName>
        <description>This field captures Assistant&apos;s fax number</description>
        <label>Assistant Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Public_Engagement_Data_Source__c</fullName>
        <description>This field captures the Data Source for Public Engagement App</description>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Engagement_Is_Public_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the contact is a Public Engagement Contact or not.</description>
        <label>Is Public Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Engagement_Region__c</fullName>
        <description>This field allows public engagement users to identify the region(s) that contacts are a part of.</description>
        <label>Public Engagement Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPCD_Agency_Head__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Agency Head?</description>
        <label>Agency Head?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RPCD_Building__c</fullName>
        <description>Building</description>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Bureau__c</fullName>
        <description>Bureau</description>
        <label>Bureau</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Division__c</fullName>
        <description>RPCD Division</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Functional_Area__c</fullName>
        <description>Functional Area</description>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Training &amp; General</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPCD_Office__c</fullName>
        <description>RPCD Office</description>
        <label>Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Parent_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Room__c</fullName>
        <description>RPCD Room</description>
        <label>Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPCD_Suffix__c</fullName>
        <description>RPCD Suffix</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Email_Initiation__c</fullName>
        <description>This field is to store the person start date.</description>
        <label>Start Date Email Initiation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the supervisor of this Contact.</description>
        <label>Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisory_Status__c</fullName>
        <description>Populated based on same field on corresponding User record by Federation Identifier.</description>
        <label>Supervisory Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPN__c</fullName>
        <label>UPN</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WORK_BUILDING_PRIMARY__c</fullName>
        <label>Work Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sm1e__Labor_Rate_Overtime__c</fullName>
        <description>Overtime Labor Rate to be applied to a Work Order Task when booking Overtime Hours</description>
        <inlineHelpText>Overtime Labor Rate to be applied to a Work Order Task when booking Overtime Hours</inlineHelpText>
        <label>Labor Rate Overtime</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sm1e__Labor_Rate_Regular__c</fullName>
        <description>Regular Hourly Labor Rate to be used for this Work Order Labor Resource when charging time to a Work Order Task</description>
        <inlineHelpText>Regular Hourly Labor Rate - Used for Actual Costs when charging Regular Time to a Work Order</inlineHelpText>
        <label>Labor Rate Regular</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sm1e__Work_Order_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate Contact can be a Resource to assign to a Work Order, Work Order Task, or Work Order Task Labor in SaaSMaint</description>
        <inlineHelpText>Checkbox to indicate Contact can be a Resource to assign to a Work Order, Work Order Task, or Work Order Task Labor in SaaSMaint</inlineHelpText>
        <label>Work Order Resource</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Person_Start_Date__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>AllContactsGSA</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.GSA</value>
        </filters>
        <label>All Contacts-GSA</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>Contact_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_GSA_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.GSA</value>
        </filters>
        <label>All GSA Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_GSA_Contacts_J</fullName>
        <columns>Affiliation__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>JIGSAW_KEY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.GSA</value>
        </filters>
        <label>All GSA Contacts-J</label>
    </listViews>
    <listViews>
        <fullName>All_Non_GSA_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Non_GSA</value>
        </filters>
        <label>All Non GSA Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Title_VI_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>OCR_Reporting_State__c</columns>
        <columns>OCR_Title_VI_Primary_Contact__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Title_VI_Contact</value>
        </filters>
        <label>All Title VI Contacts</label>
        <sharedTo>
            <group>OCR_Title_VI_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Public_Engagement_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Public_Engagement_Is_Public_Engagement__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Non_GSA</value>
        </filters>
        <label>Public Engagement Contacts</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Real_Property_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RPCD_Functional_Area__c</field>
            <operation>equals</operation>
            <value>General,Private,Training,Training &amp; General</value>
        </filters>
        <label>Real Property Contacts</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Region_01</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Public_Engagement_Region__c</field>
            <operation>includes</operation>
            <value>01</value>
        </filters>
        <label>Region 01</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Region_02</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Public_Engagement_Region__c</field>
            <operation>includes</operation>
            <value>02</value>
        </filters>
        <label>Region 02</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Region_03</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Public_Engagement_Region__c</field>
            <operation>includes</operation>
            <value>03</value>
        </filters>
        <label>Region 03</label>
        <sharedTo/>
    </listViews>
    <recordTypes>
        <fullName>Federal</fullName>
        <active>true</active>
        <description>This contact record is used to track information for individuals who are federal contacts but not GSA employees</description>
        <label>Federal</label>
    </recordTypes>
    <recordTypes>
        <fullName>GSA</fullName>
        <active>true</active>
        <description>This contact record is used to track information for GSA employees.</description>
        <label>GSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>This contact record is used to track Individuals.</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_GSA</fullName>
        <active>true</active>
        <description>This contact record is used to track information for individuals who are not GSA employees.</description>
        <label>Non-GSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Local</fullName>
        <active>true</active>
        <description>This contact record is for State &amp; Local organizations.</description>
        <label>State &amp; Local</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_VI_Contact</fullName>
        <active>true</active>
        <description>This is the contact record type for Title VI, used by Title VI rollouts.</description>
        <label>Title VI Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>This contact record is used to track information for individuals who are external vendor contacts</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Acct_addy_required_if_contact_via_mail</fullName>
        <active>true</active>
        <description>Account address is required if &quot;Contact Via&quot; is mail.</description>
        <errorConditionFormula>AND ( ISPICKVAL(OCR_Contact_Via__c, &quot;Mail&quot;) , OR(Account.BillingStreet = &quot;&quot;, Account.BillingCity = &quot;&quot;, Account.BillingPostalCode =&quot;&quot;, Account.BillingState =&quot;&quot;))</errorConditionFormula>
        <errorMessage>Full address on account is required if &quot;Contact Via&quot; is Mail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_required_if_contact_via_email</fullName>
        <active>true</active>
        <description>Email field is required if &quot;Contact Via&quot; is e-mail.</description>
        <errorConditionFormula>AND ( ISPICKVAL(OCR_Contact_Via__c, &quot;E-Mail&quot;) , Email = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Email is required if &quot;Contact Via&quot; is E-Mail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_required_if_contact_via_fax</fullName>
        <active>true</active>
        <description>Fax field is required if &quot;Contact Via&quot; is fax.</description>
        <errorConditionFormula>AND ( ISPICKVAL(OCR_Contact_Via__c, &quot;Fax&quot;) , Fax = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Fax is required if &quot;Contact Via&quot; is Fax.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_Public_Engagement_Required</fullName>
        <active>true</active>
        <description>Is Public Engagement field is required if Public Engagement Region is selected</description>
        <errorConditionFormula>AND(NOT( ISBLANK( Public_Engagement_Region__c )), Public_Engagement_Is_Public_Engagement__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Public_Engagement_Is_Public_Engagement__c</errorDisplayField>
        <errorMessage>The &quot;Is Public Engagement&quot; checkbox must be checked if the Public Engagment Region field is filled in.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_Via_Required</fullName>
        <active>true</active>
        <description>Contact Via is required for Title VI primary contacts.</description>
        <errorConditionFormula>AND( RecordTypeId = &apos;01230000001JedV&apos;, OCR_Title_VI_Primary_Contact__c = TRUE, ISPICKVAL(OCR_Contact_Via__c ,&quot;&quot;))</errorConditionFormula>
        <errorMessage>Contact Via is required for Title VI primary contacts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Public_Engagement_Region_Required</fullName>
        <active>true</active>
        <description>Public Engagement Region field should be required if Public Engagement checkbox is checked</description>
        <errorConditionFormula>AND( Public_Engagement_Is_Public_Engagement__c =True, ISNULL( Public_Engagement_Region__c ))</errorConditionFormula>
        <errorDisplayField>Public_Engagement_Region__c</errorDisplayField>
        <errorMessage>Public Engagement Region required for Public Engagement contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Account_Record_Type</fullName>
        <active>true</active>
        <description>For Vendor and Federal contacts, verify that the account record type is the same as contact record type</description>
        <errorConditionFormula>IF( RecordType.DeveloperName == &quot;Vendor&quot;, AND( Account.RecordType.DeveloperName &lt;&gt; &quot;Vendor&quot;), IF( RecordType.DeveloperName == &quot;Federal&quot;, AND( Account.RecordType.DeveloperName &lt;&gt; &quot;Federal&quot;),FALSE))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please select an Account type that is the same as the Contact type you have created (i.e. a Vendor Contact can only be linked to a Vendor Account; a Federal Contact can only be linked to a Federal Account)</errorMessage>
    </validationRules>
</CustomObject>